this is a test for orbitos-v2 (live plot update via websockets), unrelated to the health dashboard but this is currently my playgroud so i can do what i want
